--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2678,3 +2678,10 @@ a, a:active, a:focus {
     }
 }
 
+.outputText {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+    font-weight: 700;
+    color: #45ba00;
+}
